@@ -2,7 +2,7 @@
 <!--
     DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 
-    Copyright 1997-2009 Sun Microsystems, Inc. All rights reserved.
+    Copyright 1997-2010 Sun Microsystems, Inc. All rights reserved.
 
     The contents of this file are subject to the terms of either the GNU
     General Public License Version 2 only ("GPL") or the Common Development
@@ -138,6 +138,7 @@
 		<module>webapp</module>
 		<module>taglib</module>
 		<module>logging</module>
+		<module>outlook</module>
 		<module>javadoc</module>
 	    </modules>
 	    <activation>
